syntax = "proto3";
package saonetwork.sao.node;

import "gogoproto/gogo.proto";

option go_package = "github.com/SaoNetwork/sao/x/node/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  uint64 block_reward = 1 ;
  string earn_denom = 2;
}
